--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "node": "0.10.x"
   },
   "dependencies": {
+    "hoek": "^1.5.x",
+    "boom": "^2.4.x",
+    "joi": "^2.9.x",
     "handlebars": "1.0.x"
   },
   "devDependencies": {
